@@ -13,6 +13,10 @@ Here is a history of user visible changes to Mailman.
 
   Bug Fixes and other patches
 
+    - Reordered the 'cancel' and 'subscribe' buttons on the subscription
+      confirmation web page so the default action upon 'enter' will be the
+      subscribe button in browsers that pick the first button.  Bug #530654.
+
     - Fixed a bug in the admindb interface that could apply a moderator
       action to a message not displayed.  Bug #533468.
 
